--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --watch",
+    "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/flipps/webpack#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   }
