--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
