--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "dependencies": {}
 }
